# PertEMA

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pixi.toml  pyproject.toml  requirements-uv.txt
.github/workflows/: ci.yml
app/: README.md
app/backend/: featurize.py  ingest.py  main.py  report.py  scoring.py  test_api.py  test_scoring.py
app/client/: pertema_client.py
app/deploy/: Dockerfile  OPERATIONS.md  docker-compose.yml
app/examples/: build_example.py  example_gladstone.npz  example_predictions.csv  example_preview.csv
app/frontend/: api.html  benchmark.html  faq.html  index.html  interpret.html  methods.html  model_card.html
baselines/: run_in_container.sh
docs/: api.md  index.md  interpreting_reliability.md  quickstart.md
paper/: paper.bib  paper.md
pertema/: __init__.py  cli.py  featurize.py  report.py  scoring.py
results/: stats_ci_reported.csv  stats_multiple_comparison.csv
results/benchmark/: accuracy_metrics.csv  benchmark_reliability.csv  mechanism_metrics.csv  provenance.csv
results/ceiling/: noise_ceiling_adamson_summary.csv  noise_ceiling_guide_gladstone_summary.csv  noise_ceiling_norman_summary.csv  noise_ceiling_replogle_summary.csv  noise_ceiling_summary.csv  replicate_ceiling.csv  winner_curse_debiased.csv
results/diagnostics/: effect_size_stratified.csv  mode_collapse.csv  transfer_confound.csv  within_vs_between_pair.csv
results/error_correlation/: conditional_worst_quartile.csv  error_corr_pearson.csv  error_corr_spearman.csv  error_correlation_adamson.csv  error_correlation_norman.csv  error_correlation_replogle.csv  error_correlation_summary.csv  per_perturbation_errors_adamson.csv  per_perturbation_errors_norman.csv  per_perturbation_errors_replogle.csv  rho_artifact_control.csv
results/parity/: parity_adamson.csv  parity_gladstone.csv  parity_gladstone_foundation.csv  parity_norman.csv  parity_per_seed.csv  parity_replogle.csv  parity_wong_metrics.csv
results/pertema/: calibration.csv  calibration_per_seed.csv  donor_transfer_per_seed.csv  donor_transfer_summary.csv  estimator_metrics_per_seed.csv  estimator_metrics_summary.csv  estimator_transfer_matrix.csv  estimator_transfer_summary.csv  gnn_vs_gbt.csv  intrinsic_uncertainty_transfer.csv  intrinsic_uncertainty_transfer_per_seed.csv  mc_dropout_transfer.csv  mc_dropout_transfer_per_seed.csv  mechanism_drivers.csv  mechanism_feature_groups.csv  nested_estimator_comparison.csv  nested_estimator_summary.csv  nested_transfer_estimator_comparison.csv  nested_transfer_estimator_summary.csv  nsweep_transfer.csv  nsweep_transfer_per_seed.csv  prescribe_vs_pertema_norman.csv  replogle_transfer_per_seed.csv  replogle_transfer_summary.csv  router_adamson.csv  router_adamson_rquality.csv  router_adamson_sensitivity.csv  router_diverse_gladstone.csv  router_replogle_per_seed.csv  router_replogle_summary.csv  router_single_context.csv  significance_paired_bootstrap.csv  transfer_estimator_per_seed.csv  transfer_estimator_summary.csv
tests/: test_cli.py  test_core.py
web/: README.md  api.html  benchmark.html  faq.html  index.html  interpret.html  methods.html  model_card.html
(+129 files in other folders)
