[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pertema"
version = "0.1.0"
description = "Post-hoc reliability estimation for single-cell perturbation prediction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bishal Shrestha" }]
keywords = [
  "single-cell",
  "perturbation prediction",
  "Perturb-seq",
  "uncertainty quantification",
  "conformal prediction",
  "calibration",
  "selective prediction",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "scikit-learn",
  "xgboost",
]

[project.optional-dependencies]
app = ["fastapi", "uvicorn", "httpx", "python-multipart"]
test = ["pytest"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]
lint = ["ruff"]

[project.scripts]
pertema = "pertema.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Select the rule set explicitly so the checked rules do not change when ruff's
# implicit defaults change between releases. This is the pycodestyle-error and
# pyflakes set the code is written and verified against.
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
# the FastAPI service uses a sys.path shim before its imports; the API test script uses compact assertions
"app/backend/main.py" = ["E402"]
"app/backend/test_api.py" = ["E702"]

[project.urls]
Homepage = "https://github.com/OfficialBishal/PertEMA"
Repository = "https://github.com/OfficialBishal/PertEMA"
Documentation = "https://github.com/OfficialBishal/PertEMA/tree/main/docs"

[tool.setuptools]
packages = ["pertema"]
